# routing-game

./: .env  .gitignore  CLAUDE.md  JOB_SELECTION_REVAMP.md  LICENSE  PLACE_EXTRACTION_OPTIMIZATION_EXPERIMENTS.md  README.md  TODO.md  UPGRADE_SYSTEM_REDESIGN.md  package-lock.json  places-loading-report.md  pointgist.md  test_route.sh
.cursor/rules/: docker-server.mdc  never-run-job-generator.mdc  use-orm.mdc  use-tailwind.mdc  use-uv.mdc
.github/workflows/: test.yml
docs/: maplibre-feature-parity-and-plan.md  tiles-plan.md
osm_utils/: .env  .gitignore  analyze_components.py  profile_results.prof  profile_results.txt  pyproject.toml
osm_utils/scripts/: addresses_to_geoparquet.py  analyze_components.py  analyze_connectivity.py  analyze_highway_types.py  analyze_places.py  analyze_road_types.py  combine_nuts_with_uk.py  csv_to_parquet_addressed_converter.py  extract_addresses.py  extract_addresses_from_csv.py  extract_places_from_csv.py  find_nuts_region.py  map_addresses_to_network.py  profile_csv_conversion.py  seed_regions_from_geojson.py  simplify_routable_ways.py  trim_and_extract_addresses.py  trim_to_largest_component.py
osm_utils/src/osm_utils/: __init__.py  database.py  nuts_lookup.py  osm_analyzer.py  routable_ways.py  way_simplifier.py
osm_utils/tests/: conftest.py  test_nuts_lookup.py  test_simplify_routable_ways.py
osm_utils_cpp/: CMakeLists.txt  Dockerfile  README.md  place_categories.yaml
osm_utils_cpp/include/: CategoryMatcher.h  DiskSpatialIndex.h  NUTSRegionLookup.h  PlaceExtraction.h  RoutableWays.h  RoutingProfile.h
osm_utils_cpp/src/: CategoryMatcher.cpp  NUTSRegionLookup.cpp  PlaceExtraction.cpp  connect_components.cpp  extract_categorized_places.cpp  trim_and_extract.cpp
routing-app/: .env.example  .gitignore  KNIP_CLEANUP.md  LOGGING.md  README.md  drizzle.config.ts  eslint.config.js  game-config.yaml  knip.json  package-lock.json  package.json  profile-analysis.txt  tailwind.config.js  vite.config.ts  vitest-setup-server.ts
routing-app/790033.0x/: isolate-0x62b9bec36000-790033-790033-v8.log.preprocess-ready  meta.json
routing-app/config/: game-config.yaml  place_goods.yaml  upgrades.yaml  vehicles.yaml
routing-app/drizzle/: 0000_upgrade_system_redesign.sql  0001_remove_route_level.sql  0002_active_job_single_xp.sql  0003_eager_exiles.sql  0004_refactor_employee_location.sql  0005_add_regions_table.sql  0006_drop_job_approx_fields.sql  0007_low_grandmaster.sql  0008_messy_victor_mancha.sql  0009_square_lady_bullseye.sql  0010_fuzzy_monster_badoon.sql  0011_migrate_job_location_to_geometry_3857.sql  0012_powerful_peter_quill.sql  0013_vengeful_firestar.sql  0014_thin_lionheart.sql  0015_steady_warbird.sql  0016_previous_silver_fox.sql  0017_drop_addresses_use_places.sql  0018_messy_charles_xavier.sql  0019_active_places.sql  0020_active_places_with_geom.sql  0021_martin_tile_functions.sql  0022_refine_tile_functions.sql  0023_cap_tile_size.sql  0024_cap_tile_size_lines_limit.sql  0025_enhanced_active_places_with_geom.sql  0026_add_active_places_place_id_index.sql
routing-app/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  0025_snapshot.json  0026_snapshot.json  _journal.json
routing-app/scripts/: cleanup-routes.ts  format-staged.sh  generate-auth-secret.js  init-db.ts  populate-active-places.ts  populate-categories.ts  populate-places.ts  populate-regions.ts  setup-postgis.ts  test-complete-cheat.ts
routing-app/src/: app.css  app.d.ts  auth.ts  hooks.server.ts
routing-app/src/db/: schema.ts
routing-app/src/lib/: activeJobComputation.ts  addresses.test.ts  addresses.ts  coordinateGrid.test.ts  coordinateGrid.ts  employeeUtils.ts  formatting.ts  generateJobs.ts  generateRoutes.test.ts  generateRoutes.ts  geo.test.ts  geo.ts  index.ts  jobAssignment.ts  jobCategories.ts  logger.ts  profiling.ts  routing-client.test.ts  routing-client.ts  routing.test.ts  routing.ts  server.ts  types.ts  upgrades.ts  vehicleUtils.ts  vehicles.ts
routing-app/src/lib/components/: CharacterCard.svelte  CharacterSelection.svelte  Cheat.svelte  Cheats.svelte  EmployeeCard.svelte  EmployeeDetails.svelte  EmployeeJobDetailsTab.svelte  EmployeeLevelStatusTab.svelte  EmployeeUpgradeMenuTab.svelte  EmployeesPanel.svelte  ErrorOverlay.svelte  GameState.svelte  GlobalXpPanel.svelte  JobCard.svelte  JobMarker.svelte  LevelsAndUpgradesPanel.svelte  LoginForm.svelte  Navigation.svelte  RouteCard.svelte  RouteMap.svelte  RouteMapMaplibre.svelte  UpgradesPanel.svelte  UpgradesPanelPlaceholder.svelte
routing-app/src/lib/config/: placeGoodsTypes.ts  types.ts
routing-app/src/lib/integration/: addresses.test.ts  routing.test.ts
routing-app/src/lib/jobs/: activeJobComputation.ts  generateJobs.ts  goodToCategory.ts  jobAssignment.ts  jobCategories.ts  jobCompletion.ts  jobUtils.ts  jobValue.ts  queryJobs.ts
routing-app/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  page.svelte.test.ts
routing-app/src/scripts/: README.md  analyze-address-distribution.ts  job-generator.ts  parallel-profile.ts  profile-job-generation.ts  simple-profile.ts
routing-app/static/: map-style.json
routing_server/: .dockerignore  API_DOCUMENTATION.md  CMakeLists.txt  Dockerfile  MAPUTNIK.md  README.md  docker-compose.yml  docker-run.sh  main.cpp  martin-config.yaml  test_api.sh
routing_server/include/: ApiHandlers.h  JsonBuilder.h  Logger.h  RoutingEngine.h
routing_server/postgres-conf/: pg_hba.conf  postgresql.conf
routing_server/postgres-init/: 01-init.sql
routing_server/src/: ApiHandlers.cpp  JsonBuilder.cpp  RoutingEngine.cpp
routing_server/tests/: CMakeLists.txt  README.md  integration_tests.cpp
scripts/: generate_europe_mbtiles.sh  ingest_osm.sh  osm2pgsql-flex.lua  test_route.sh
(+143 files in other folders)
