[project]
name = "osm-utils"
version = "0.1.0"
description = "Utilities for analyzing and preprocessing OSM files for routing"
readme = "README.md"
authors = [
    { name = "Rik Voorhaar", email = "rik.voorhaar@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "osmium>=3.6.0",
    "networkx>=3.0",
    "shapely>=2.0.0",
    "click>=8.0.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "scipy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
